k8s-templates/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lesser-bank-api
  name: lesser-bank-api
spec:
  selector:
    matchLabels:
      app: lesser-bank-api
  replicas: 1
  template:
    metadata:
      labels:
        app: lesser-bank-api
    spec:
      containers:
      - name: lesser-bank-api
        image: lesser-bank/lesser-bank-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80




#OLD VER
# apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
# kind: Deployment
# metadata:
#   name: lesser-bank-api
# spec:
#   selector:
#     matchLabels:
#       name: lesser-bank-api
#       tier: frontend
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         name: lesser-bank-api
#         tier: frontend
#     spec:
#       containers:
#       - name: lesser-bank-api
#         image: lesser-bank/lesser-bank-api
#         imagePullPolicy: IfNotPresent
#         resources:
#           requests:
#             cpu: 100m
#             memory: 100Mi
#         env:
#         - name: GET_HOSTS_FROM
#           value: dns
#         - name: DATABASE_URL
#           value: postgres://postgres:postgres@database/postgres
#           # If your cluster config does not include a dns service, then to
#           # instead access environment variables to find service host
#           # info, comment out the 'value: dns' line above, and uncomment the
#           # line below:
#           # value: env
#         ports:
#         - containerPort: 80
