k8s-templates/deployment-postgres.yml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  selector:
    matchLabels:
      app: postgres-deploy
      tier: database
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-deploy
        tier: database
    spec:
      containers:
      - name: postgres-deploy
        image: postgres:15
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5432
