k8s-templates/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: lesser-bank-api
  labels:
    app: lesser-bank-api
spec:
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    app: lesser-bank-api
  type: LoadBalancer
